fixing some dark mode things

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap');
 
 :root {
     --cp1: #5647873a;
@@ -44,7 +45,7 @@ body {
 
     background-attachment: fixed;
 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Fredoka', Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
@@ -205,7 +206,6 @@ a.cpm1:hover {
     /* animation: topnav-hover 0.2s linear 0s 1 forwards normal; */
     box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 30px !important;
     /* scale: 1.05; */
-    background-color: var(--cpm3);
 }
 
 .topnav a {
@@ -229,7 +229,7 @@ a.cpm1:hover {
     position: fixed;
     top: 20px;
     right: 20px;
-    z-index: 3;
+    z-index: 9;
     border: none;
     padding: 20px;
 
@@ -582,6 +582,8 @@ a.inh {
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
 
+    z-index: 1;
+
 }
 
 .portfolio .portfolio-item:hover {
@@ -611,6 +613,7 @@ a.inh {
 
 .portfolio .portfolio-description .portfolio-type-yr {
     text-align: right;
+    font-family: 'Fredoka', sans-serif;
 }
 
 .portfolio .portfolio-year {
@@ -644,7 +647,7 @@ a.inh {
     left: 40px;
     width: calc(100vw - 80px);
     height: calc(100vh - 80px);
-    
+
     border-radius: 10px;
     border: none;
     position: fixed;
@@ -665,7 +668,7 @@ a.inh {
 
 #portfolio-popout.displayed {
     /* display: block; */
-    
+
 
     z-index: 4;
 
@@ -691,7 +694,7 @@ a.inh {
     position: fixed;
     top: 30px;
     right: 30px;
-    z-index: 7;
+    z-index: 5;
 
     background-color: var(--cpm5);
 
@@ -736,6 +739,10 @@ a.inh {
         box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 30px;
         scale: 1.1 !important;
 
+    }
+
+    .topnav:hover {
+        background-color: var(--cpm3);
     }
 }
 
@@ -821,6 +828,14 @@ a.inh {
     a.cpm1:hover {
         background-color: var(--cpf1);
     }
+
+    .portfolio .portfolio-description {
+        color: rgb(167, 167, 167);
+    }
+
+    .portfolio .portfolio-item:hover {
+        background-color: var(--cpd);
+    }
 }
 
 @media only screen and (max-width: 925px) {
@@ -843,7 +858,7 @@ a.inh {
         /* float: right; */
         right: 80px;
 
-        z-index: 3;
+        z-index: 9;
         backdrop-filter: blur(10px);
 
         background-color: var(--cpm5);
@@ -860,6 +875,7 @@ a.inh {
 
     .topnav a {
         color: white !important;
+        z-index: 10;
     }
 
     #hamburger {
@@ -889,5 +905,18 @@ a.inh {
 
     .contact-inner {
         width: 100%;
+    }
+
+    input {
+        color: white;
+    }
+}
+
+@media only screen and (max-width: 925px) and (prefers-dark-color-scheme: dark) {
+    .topnav {
+        background-color: var(--cpd);
+        color: white;
+
+        z-index: 9;
     }
 }
